Text in chat doesn't look so weird now.